# OpenMythos

./: README.md  pyproject.toml  requirements.txt  test_main.py
examples/: moda_example.py  variants_example.py
open_mythos/: __init__.py  main.py  moda.py  tokenizer.py  variants.py
tests/: bench_vs_transformer.py  small_benchmark.py  test_rope_debug.py
training/: 3b_fine_web_edu.py  requirements.txt
